# hw3-breitlingsny

./: .gitignore  Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
data/: GW150914_data.csv
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
